2011-01-08  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @problema/private/construir_{lb,ub}.m:
	(obj.ls, obj.us): Eliminadas as variáveis de volume de usinas fio-d'água.

	* @problema/private/construir_{A,X,bb}.m:
	Eliminadas as variáveis de volume de usinas fio-d'água.

2011-01-07  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @io/private/ropt_.m: 
	([VOLA],[VOLU]) Considerada eliminação das variáveis de volume final.
	([VOLU]) Corrigido cálculo do volume útil em usinas fio-d'água.

	* @sistema/{sistema,get,set,dump}.m:
	(obj.nf, obj.nr, obj.uf, obj.ur): Propriedades adicionadas.
	
	* @io/private/uhe_.m: Adicionado cálculo do número de usinas fio-d'água.
	
2011-01-06  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @problema/{problema,get,dump}.m:
	(obj.na, obj.nq, obj.nv): Propriedades adicionadas.
	(obj.Xj): Propriedade removida.
	
	* @problema/private/construir_bb.m: Volume final subtraído do vetor b.
	
	* @problema/private/construir_X.m: Eliminadas variáveis de volume final.
	
	* @problema/private/construir_{lb,ub}.m: 
	(obj.ls, obj.us) Eliminadas variáveis de volume final.
	
	* @problema/private/extrair_{s,q,v}.m: Eliminadas variáveis de volume final.
	
	* @problema/private/empacotar_s.m: Eliminadas variáveis de volume final.
	
	* @problema/private/desempacotar_s.m: Eliminadas variáveis de volume final.
	
	* @problema/verificar.m: Eliminada correção de volume mínimo igual a máximo.
	
	* @problema/private/calcular_{P,JP,HP}.m:
	Considerada eliminação das variáveis de volume final.

2011-01-05  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* Versão 2.0-RELEASE anunciada.

	* @io/private/hco_.m: Adicionados seções de estatísticas da otimização.
	
2011-01-04  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

	* @despacho: Classe removida.
	
	* @resultado: Classe adicionada.
	
	* @ute/{ute,get,set,dump}.m (obj.cg): Propriedade renomeada para obj.co
	
	* @problema/{problema,get,set,dump} (obj.rs): Propriedade adicionada.